--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="styles/site-plan-rafting.css">
-    <title>Rivers - Dry Oar Boating</title>
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon"> <!-- Added favicon -->
+    <link rel="stylesheet" href="stlyles/site-plan-rafting.css">
+
+    <title>Dry Oar Boating - Whitewater Rafting Vacations</title> <!-- Updated title -->
 </head>
 <body>
     <header>
@@ -17,7 +18,7 @@
             <a class="nav_link" href="index.html" aria-label="Go to Home">Home</a>
             <a class="nav_link" href="rivers.html" aria-label="Rivers">Rivers</a>
             <a class="nav_link" href="site-plan-rafting.html" aria-label="View Site Plan">Site Plan</a>
-            <a class="nav_link" href="contactus.html" aria-label="Contact Us">Contact Us</a> 
+            <a class="nav_link" href="contactus.html" aria-label="Contact Us">Contact Us</a>
         </nav>
     </header>
 
@@ -26,59 +27,43 @@
             <img id="hero-img" src="images/hero.png" alt="Group of people enjoying a thrilling white water rafting adventure">
         </div>
         <section id="hero-msg">
-            <h1 class="home-title">Rivers We Run</h1>
-            <h4>Choose Your Adventure</h4>
+            <h1 class="home-title">Have An Adventure</h1>
+            <h4>Make Memories with Dry Oar</h4>
             <div class="button-box">
-                <a class="book" href="contactus.html">Book Now</a>
+                <a class="book" href="contactus.html">Reserve Your Spot Now</a> <!-- Updated button text -->
             </div>
         </section>
     </div>
 
-    <main>
-        <section class="rivers-grid">
-            <div class="card">
-                <img class="card-img" src="images/rivers.jpg" alt="A tranquil river flowing through a forest">
-                <div class="card-content">
-                    <img class="icon" src="images/river_icon.png" alt="Icon representing rivers">
-                    <h2>Main Fork of the Salmon River, Idaho</h2>
-                    <p>Nestled deep in the Frank Church Wilderness of No Return, the Salmon River offers some of the best white water rafting in America.</p>
-                </div>
-            </div>
-            <div class="card">
-                <img class="card-img" src="images/camping.jpg" alt="A camping tent set up in the mountains">
-                <div class="card-content">
-                    <img class="icon" src="images/fire_icon.png" alt="Icon representing camping">
-                    <h2>Desolation and Gray Canyon, Utah</h2>
-                    <p>Perfect for families, the Desolation Canyon trip offers 84 miles of fun, excitement, and incredible landscapes.</p>
-                </div>
-            </div>
-            <div class="card">
-                <img class="card-img" src="images/rapids.jpg" alt="A raft navigating through rapids">
-                <div class="card-content">
-                    <img class="icon" src="images/oars.png" alt="Icon representing rafting">
-                    <h2>Grand Canyon, Arizona</h2>
-                    <p>This 188-mile journey through the Grand Canyon is a once-in-a-lifetime experience.</p>
-                </div>
-            </div>
+    <main class="home-grid" role="main">
+        <section class="rivers-card">
+            <img class="card-img" src="images/rivers.jpg" alt="A tranquil river flowing through a forest">
+            <img class="icon" src="images/river_icon.png" alt="Icon representing rivers">
+            <h2>Rivers</h2>
         </section>
-
-        <div id="background">
-            <img class="mountains" src="images/mountains.jpg" alt="Misty mountains at sunrise">
-        </div>
-
+        <section class="camping-card">
+            <img class="card-img" src="images/camping.jpg" alt="A camping tent set up in the mountains">
+            <img class="icon" src="images/fire_icon.png" alt="Icon representing camping">
+            <h2>Camping</h2>
+        </section>
+        <section class="rapids-card">
+            <img class="card-img" src="images/rapids.jpg" alt="A raft navigating through rapids">
+            <img class="icon" src="images/oars.png" alt="Icon representing rafting">
+            <h2>Rapids</h2>
+        </section>
+        <div id="background"></div>
+        <img class="mountains" src="images/mountains.jpg" alt="Misty mountains at sunrise">
         <section class="msg">
-            <h2>Experience Nature's Best Rivers</h2>
-            <p>Each river brings its own unique challenges and beauty. From the mighty Salmon River to the majestic Grand Canyon, we offer adventures for all skill levels.</p>
-            <a class="join" href="contactus.html">Plan Your Trip</a>
+            <h2>More Than Just The Thrill</h2>
+            <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.</p>
+            <a class="join" href="rivers.html">Join Us</a>
         </section>
     </main>
 
     <footer>
         <p>Dry Oar &copy; 2024 - Dias Doktyrbek</p>
-        <div class="footer-links">
-            <a href="site-plan-rafting.html">Site Plan</a>
-            <a href="contactus.html">Contact Us</a>
-        </div>
+        <p><a href="site-plan-rafting.html">Site Plan</a></p>
+        <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
             <a href="https://facebook.com" aria-label="Visit our Facebook page">
                 <img src="images/facebook.png" alt="Facebook icon">
@@ -92,6 +77,4 @@
         </div>
     </footer>
 </body>
-</html>
-
 </html>
