--- a/rivers.html
+++ b/rivers.html
@@ -34,27 +34,38 @@
         </section>
     </div>
 
-    <main class="home-grid" role="main">
-        <section class="rivers-card">
-            <img class="card-img" src="images/rivers.jpg" alt="A tranquil river flowing through a forest">
-            <img class="icon" src="images/river_icon.png" alt="Icon representing rivers">
-            <h2>Main Fork of the Salmon River, Idaho</h2>
-            <p>Nestled deep in the Frank Church Wilderness of No Return, the Salmon River offers some of the best white water rafting in America.</p>
+    <main>
+        <section class="rivers-grid">
+            <div class="card">
+                <img class="card-img" src="images/rivers.jpg" alt="A tranquil river flowing through a forest">
+                <div class="card-content">
+                    <img class="icon" src="images/river_icon.png" alt="Icon representing rivers">
+                    <h2>Main Fork of the Salmon River, Idaho</h2>
+                    <p>Nestled deep in the Frank Church Wilderness of No Return, the Salmon River offers some of the best white water rafting in America.</p>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img" src="images/camping.jpg" alt="A camping tent set up in the mountains">
+                <div class="card-content">
+                    <img class="icon" src="images/fire_icon.png" alt="Icon representing camping">
+                    <h2>Desolation and Gray Canyon, Utah</h2>
+                    <p>Perfect for families, the Desolation Canyon trip offers 84 miles of fun, excitement, and incredible landscapes.</p>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img" src="images/rapids.jpg" alt="A raft navigating through rapids">
+                <div class="card-content">
+                    <img class="icon" src="images/oars.png" alt="Icon representing rafting">
+                    <h2>Grand Canyon, Arizona</h2>
+                    <p>This 188-mile journey through the Grand Canyon is a once-in-a-lifetime experience.</p>
+                </div>
+            </div>
         </section>
-        <section class="camping-card">
-            <img class="card-img" src="images/camping.jpg" alt="A camping tent set up in the mountains">
-            <img class="icon" src="images/fire_icon.png" alt="Icon representing camping">
-            <h2>Desolation and Gray Canyon, Utah</h2>
-            <p>Perfect for families, the Desolation Canyon trip offers 84 miles of fun, excitement, and incredible landscapes.</p>
-        </section>
-        <section class="rapids-card">
-            <img class="card-img" src="images/rapids.jpg" alt="A raft navigating through rapids">
-            <img class="icon" src="images/oars.png" alt="Icon representing rafting">
-            <h2>Grand Canyon, Arizona</h2>
-            <p>This 188-mile journey through the Grand Canyon is a once-in-a-lifetime experience.</p>
-        </section>
-        <div id="background"></div>
-        <img class="mountains" src="images/mountains.jpg" alt="Misty mountains at sunrise">
+
+        <div id="background">
+            <img class="mountains" src="images/mountains.jpg" alt="Misty mountains at sunrise">
+        </div>
+
         <section class="msg">
             <h2>Experience Nature's Best Rivers</h2>
             <p>Each river brings its own unique challenges and beauty. From the mighty Salmon River to the majestic Grand Canyon, we offer adventures for all skill levels.</p>
@@ -64,8 +75,10 @@
 
     <footer>
         <p>Dry Oar &copy; 2024 - Dias Doktyrbek</p>
-        <p><a href="site-plan-rafting.html">Site Plan</a></p>
-        <p><a href="contactus.html">Contact Us</a></p>
+        <div class="footer-links">
+            <a href="site-plan-rafting.html">Site Plan</a>
+            <a href="contactus.html">Contact Us</a>
+        </div>
         <div class="social">
             <a href="https://facebook.com" aria-label="Visit our Facebook page">
                 <img src="images/facebook.png" alt="Facebook icon">
